# code

./: README.md
429/basic_project/: .mxproject  Makefile  basic_project.ioc
429/project/: .mxproject  Makefile  basic_project.ioc
429/project2/: .mxproject  Makefile  basic_project.ioc
C++/hash/: main.cpp
C++/standerIn/: CMakeLists.txt  main.cpp
C++/string/: main.cpp
C++/vector_and_cin_and_cout/: main.cpp
C/24-2-15-open/: 1.txt  open  open.c  write  write.c
C/24-7-15-LinkNode/: LinkNode.c  Linklist.c
C/24-7-20-shuzhu/: shuzhu.c
C/24-7-23-enum/: enum.c
C/24-7-23-malloc/: malloc.c
C/24-7-23-pointer/: pointer.c
C/24-7-23-struct/: func_and_struct.c  struct.c
C/24-7-25-dynamic_array/: dynamic_array.c
C/24-7-25-local_n_globle_variable/: variable.c
C/24-7-25-union/: union.c
C/24-8-27-typedef/: typedef.c
C/24-8-27Callback/: callback.c
C/24-9-20/: quark_water.c
C/24-9-7motor/: test.c
C/25-1-20/: Makefile  main.c  sqlist.c  sqlist.h
C/25-1-6-malloc/: malloc.c
C/25-2-11-jos/: list.c  list.h  main  main.c
C/25-2-11-jos_learn/: Makefile  list.c  list.h  main  main.c
C/25-2-14-fopen/: main  main.c
C/25-2-15-jos/: list.c  list.h  main  main.c
C/25-2-16-dup/: dup  dup.c  dup2  dup2.c
C/25-2-16-jos/: Makefile  list.c  list.h  main.c
C/25-2-2-list/: list.c  list.h
C/25-2-7-link/: Makefile  main.c  node  node.c  node.h
C/25-2-9-list/: .node.c.swp  node.c
C/25-3-13-llist/: all  llist.c  llist.h  main.c  main.out
C/25-4-1-tree/: main.c  (+3 more)
C/25-4-2-queue/: CMakeLists.txt  main.c  queue.c  queue.h
huawei/: CMakeLists.txt  main.cpp
(+299 files in other folders)
